# cpp-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/: FindCheck.cmake
lib/: lowlevel_parser.c  transform_matrix_builder.h
lib/test/: CMakeLists.txt
lib/test/tests/: parsing_test.cc  transforms_test.cc
src/: CMakeLists.txt  dtos.h  main.cc  params_dto.h
src/app/: CMakeLists.txt  doubleslider.cpp  doubleslider.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  openglwidget.cpp  openglwidget.hpp
src/controller/: facade.h
src/lib/: CMakeLists.txt
src/lib/docs/: CMakeLists.txt  Doxyfile.in
src/lib/include/: owviewer.h
src/lib/include/owviewer/: details.h
src/lib/src/: parsing.c  processing.c
src/lib/test/tests/: CMakeLists.txt  affine.check  parsing.check  processing.check  time_test.cpp
src/model/: affine_transformations.h  color.h  figure.h  parsing.c  parsing.h  primitives.h  processing.c  processing.h  scene.h  scene_object.h  transform_matrix.h  transform_matrix_builder.h
src/model/file_reader/: file_reader_base.h  lowlevel_file_reader.c  lowlevel_file_reader.h  processing.c
src/model/scene_renderer/: opengl_helpers.h  qt_scene_renderer.cc  qt_scene_renderer.h  scene_renderer_base.h
src/model/test/: CMakeLists.txt
src/model/test/tests/: affine.check  parsing.check  parsing_test.cc  processing.check  time_test.cpp  transforms_test.cc
src/view/: doubleslider.cpp  doubleslider.hpp  mainwindow.cpp  mainwindow.hpp  openglwidget.cpp  openglwidget.hpp
src/view/forms/: mainwindow.ui
